@@ -4,7 +4,6 @@ import com.unicolombo.bienestar.filters.JwtAuthenticationFilter;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.io.FileSystemResource;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -18,9 +17,6 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
-import org.springframework.core.io.FileSystemResource;
-import org.springframework.context.support.PropertySourcesPlaceholderConfigurer;
 import java.util.Arrays;
 import java.util.List;
 
@@ -31,8 +27,6 @@ public class SecurityConfig {
     @Autowired
     private JwtAuthenticationFilter jwtAuthenticationFilter;
 
-
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
@@ -42,20 +36,22 @@ public class SecurityConfig {
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
 
-                        // Actividades
                         .requestMatchers(HttpMethod.GET, "/api/actividades").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/actividades/instructor/**").hasAnyRole("INSTRUCTOR", "ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/actividades/instructor/*").hasAnyRole("INSTRUCTOR", "ADMIN")
                         .requestMatchers(HttpMethod.POST, "/api/actividades").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.PUT, "/api/actividades/**").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.DELETE, "/api/actividades/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.PUT, "/api/actividades/*").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/api/actividades/*").hasRole("ADMIN")
 
-                        // Inscripciones
                         .requestMatchers(HttpMethod.POST, "/api/inscripciones").hasRole("ESTUDIANTE")
                         .requestMatchers(HttpMethod.GET, "/api/inscripciones/estudiante").hasRole("ESTUDIANTE")
 
-                        // Auditoría
                         .requestMatchers(HttpMethod.GET, "/api/auditoria/**").hasRole("ADMIN")
 
+                        .requestMatchers(HttpMethod.PUT, "/api/admin/instructores/*").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/admin/mi-perfil").hasRole("INSTRUCTOR")
+                        .requestMatchers(HttpMethod.PUT, "/api/admin/mi-perfil").hasRole("INSTRUCTOR")
+                        .requestMatchers(HttpMethod.GET, "/api/instructor/mis-actividades/*/estudiantes").hasRole("INSTRUCTOR")
+                        .requestMatchers(HttpMethod.GET, "/api/admin/mis-actividades/*/estudiantes").hasAnyRole("INSTRUCTOR", "ADMIN")
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
@@ -63,8 +59,6 @@ public class SecurityConfig {
 
         return http.build();
     }
-
-
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -84,29 +78,13 @@ public class SecurityConfig {
                 "https://bienestar-front.onrender.com"
         ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
-    }
-
-    @Bean
-    public CorsFilter corsFilter() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",
-                "https://bienestar-front.onrender.com"
-        ));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
-        return new CorsFilter(source);
     }
 }
